--- a/views/corporateHome.ejs
+++ b/views/corporateHome.ejs
@@ -34,8 +34,11 @@
     <p>No doctors added to your corporate yet.</p>
   <% } %>
   <a href="/corporate/add-doctors"> Add Doctors</a>
+  <a href="/corporate/create-account">Create Account</a>
   <a href="/corporate/profile">View Profile</a>
   <a href="/corporate/followers">View Followers</a>
+  <a href="/corporate/<%= corporate._id %>/doctors">View Doctors</a>
+  <a href="/corporate/insights">View Insights (Corporate Dashboard)</a>
   <a href="/corporate/logout">Logout</a>
 
 
