--- a/views/corporate-list.ejs
+++ b/views/corporate-list.ejs
@@ -144,7 +144,7 @@
               </form>
             <% } %>
             
-            <a href="/patient/corporate/<%= corporate._id %>" class="view-details-btn">View Details</a>
+            <a href="/patient/corporate/<%= corporate.slug %>" class="view-details-btn">View Details</a>
           </div>
         </div>
       <% }) %>
